--- a/sass/style.scss
+++ b/sass/style.scss
@@ -36,6 +36,7 @@ header{
     background-color: transparent;
     border: none;
     font-family: 'Rubik';
+    cursor: pointer;
   &:hover{
     color: $redColor;
     transition: 0.15s;
