--- a/css/style.css
+++ b/css/style.css
@@ -52,37 +52,37 @@ header {
   background-color: white;
 }
 
-.bookmarkManager {
+.firstContent {
   display: flex;
   justify-content: center;
   column-gap: 35px;
 }
-.bookmarkManager .left-bm {
+.firstContent .left-bm {
   display: flex;
   margin-top: 40px;
   flex-direction: column;
   row-gap: 20px;
 }
-.bookmarkManager .left-bm #titulo1 {
+.firstContent .left-bm #titleFirstContent {
   font-size: 45px;
   width: 400px;
   color: rgb(43, 43, 43);
   margin: 0;
 }
-.bookmarkManager .left-bm #texto1 {
+.firstContent .left-bm #textFirstContent {
   margin: 0;
   font-size: 18px;
   color: hsl(229deg, 8%, 60%);
   text-align: start;
   width: 450px;
 }
-.bookmarkManager .left-bm .btn-bm {
+.firstContent .left-bm .btn-bm {
   width: auto;
   height: auto;
   display: flex;
   column-gap: 15px;
 }
-.bookmarkManager .left-bm .btn-bm #btn-bm-left {
+.firstContent .left-bm .btn-bm #btn-bm-left {
   border: 2px solid hsl(231deg, 69%, 60%);
   background-color: hsl(231deg, 69%, 60%);
   color: rgb(255, 255, 255);
@@ -92,12 +92,12 @@ header {
   font-family: "Rubik";
   cursor: pointer;
 }
-.bookmarkManager .left-bm .btn-bm #btn-bm-left:hover {
+.firstContent .left-bm .btn-bm #btn-bm-left:hover {
   background-color: transparent;
   color: hsl(231deg, 69%, 60%);
   transition: 0.2s;
 }
-.bookmarkManager .left-bm .btn-bm #btn-bm-right {
+.firstContent .left-bm .btn-bm #btn-bm-right {
   color: hsl(229deg, 7%, 51%);
   border: 2px solid rgb(248, 248, 248);
   background-color: rgb(248, 248, 248);
@@ -108,34 +108,34 @@ header {
   box-shadow: 0px 5px 4px -3px rgb(211, 211, 211);
   cursor: pointer;
 }
-.bookmarkManager .left-bm .btn-bm #btn-bm-right:hover {
+.firstContent .left-bm .btn-bm #btn-bm-right:hover {
   transition: 0.2s;
   background-color: transparent;
   box-shadow: none;
   color: black;
   border: 2px solid rgb(0, 0, 0);
 }
-.bookmarkManager .right-bm {
+.firstContent .right-bm {
   width: auto;
   height: auto;
 }
-.bookmarkManager .right-bm #img-ilust {
+.firstContent .right-bm #img-ilust {
   width: 34.5rem;
   height: auto;
 }
 
-.features {
+.secondContent {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.features #titulo2 {
+.secondContent #titleSecondContent {
   font-size: 30px;
-  font-family: "arial";
+  font-family: "rubik";
   color: rgb(43, 43, 43);
   text-align: center;
 }
-.features #texto2 {
+.secondContent #textSecondContent {
   color: hsl(229deg, 8%, 60%);
   text-align: center;
   width: 460px;
@@ -191,7 +191,7 @@ header {
 }
 .txt .divRightEvent #titleEvent {
   font-size: 30px;
-  font-family: "arial";
+  font-family: "rubik";
 }
 .txt .divRightEvent #textEvent {
   color: hsl(229deg, 8%, 60%);
@@ -205,7 +205,7 @@ header {
   border-radius: 5px;
   height: 2.2rem;
   width: 6rem;
-  font-family: "arial";
+  font-family: "rubik";
   cursor: pointer;
   margin-top: 12px;
 }
@@ -219,13 +219,40 @@ header {
   width: 25rem;
 }
 
-.ativado {
+.activated {
   width: 200px;
   height: auto;
   border: 0px solid transparent;
   border-bottom: 3px solid red;
   background-color: transparent;
   cursor: pointer;
+}
+
+.content3 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.content3 #title3 {
+  font-size: 26px;
+  font-family: "Rubik";
+}
+.content3 .divCards {
+  display: flex;
+  gap: 100px;
+}
+.content3 .divCards .cards {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100px;
+}
+.content3 .divCards .cards .imgCards {
+  width: 2rem;
+}
+.content3 .divCards .cards .titleCards {
+  font-size: 23px;
+  font-family: "Rubik";
 }
 
 /*# sourceMappingURL=style.css.map */
