--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,7 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 100px;
 }
 .secondContent #titleSecondContent {
   font-size: 30px;
@@ -228,31 +229,81 @@ header {
   cursor: pointer;
 }
 
-.content3 {
+.thirdContent {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 100px;
 }
-.content3 #title3 {
+.thirdContent #titleThirdContent {
   font-size: 26px;
   font-family: "Rubik";
 }
-.content3 .divCards {
-  display: flex;
-  gap: 100px;
+.thirdContent #textThirdContent {
+  color: hsl(229deg, 8%, 60%);
+  text-align: center;
+  width: 500px;
 }
-.content3 .divCards .cards {
+.thirdContent .divCards {
+  display: flex;
+  gap: 40px;
+}
+.thirdContent .divCards #secondCard {
+  position: relative;
+  top: 40px;
+}
+.thirdContent .divCards #thirdCard {
+  position: relative;
+  top: 80px;
+}
+.thirdContent .divCards .cards {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100px;
+  justify-content: center;
+  width: 13rem;
+  height: 16rem;
+  margin-top: 40px;
+  border: 2px solid rgb(248, 248, 248);
+  background-color: rgb(248, 248, 248);
+  row-gap: 5px;
+  border-radius: 10px;
+  box-shadow: 0px 5px 10px -3px rgb(197, 204, 226);
 }
-.content3 .divCards .cards .imgCards {
-  width: 2rem;
+.thirdContent .divCards .cards .imgCards {
+  width: 4.5rem;
 }
-.content3 .divCards .cards .titleCards {
-  font-size: 23px;
+.thirdContent .divCards .cards .titleCards {
+  font-size: 14px;
   font-family: "Rubik";
+}
+.thirdContent .divCards .cards .textCards {
+  margin: 0;
+  margin-bottom: 10px;
+  font-size: 12px;
+  font-family: "Rubik";
+  color: hsl(229deg, 8%, 60%);
+  text-align: center;
+  width: auto;
+}
+.thirdContent .divCards .cards .dots {
+  width: 100%;
+  margin: 10px;
+}
+.thirdContent .divCards .cards .btnCards {
+  border: 2px solid hsl(231deg, 69%, 60%);
+  background-color: hsl(231deg, 69%, 60%);
+  color: rgb(255, 255, 255);
+  border-radius: 5px;
+  height: 2.2rem;
+  width: 85%;
+  font-family: "Rubik";
+  cursor: pointer;
+}
+.thirdContent .divCards .cards .btnCards:hover {
+  background-color: transparent;
+  color: hsl(231deg, 69%, 60%);
+  transition: 0.2s;
 }
 
 /*# sourceMappingURL=style.css.map */
