--- a/sass/style.scss
+++ b/sass/style.scss
@@ -158,6 +158,7 @@ header{
     color: $textColor;
     font-size: 16px;
     cursor: pointer;
+    padding: 5px;
     &:hover{
       color: $redColor;
     } 
@@ -288,6 +289,7 @@ header{
         width: 85%;
         font-family: 'Rubik';
         cursor: pointer;
+        padding: 5px;
         &:hover{
           background-color: transparent;
           color: $blueColor;
@@ -357,6 +359,9 @@ header{
   #moreInfo{
     border: 2px solid $blueColor;
       background-color: $blueColor;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       color: rgb(255, 255, 255);
       border-radius: 5px;
       height: 2.2rem;
@@ -365,6 +370,7 @@ header{
       cursor: pointer;
       margin-top: 48px;
       margin-bottom: 120px;
+      padding: 5px;
       &:hover{
         background-color: transparent;
         color: $blueColor;
