--- a/sass/style.scss
+++ b/sass/style.scss
@@ -16,6 +16,7 @@ body{
   margin: 0;
   padding: 0;
   font-size: 18px;
+  font-family: 'rubik';
 }
 main{
   width: 100%;
@@ -41,9 +42,10 @@ header{
     border: none;
     font-family: 'Rubik';
     cursor: pointer;
+    transition: 0.2s;
   &:hover{
     color: $redColor;
-    transition: 0.15s;
+    transition: 0.2s;
   }
   }
   .login{
@@ -53,6 +55,7 @@ header{
     border-radius: 5px;
     width: 85px;
     font-size: 13px;
+    transition: 0.2s;
     &:hover{
       transition: 0.2s;
       color: $redColor;
@@ -71,7 +74,7 @@ header{
     row-gap: 20px;
     #titleFirstContent{
       font-size: 45px;
-      width: 400px;
+      width: 403px;
       color: rgb(43, 43, 43);
       margin: 0;
     }
@@ -94,6 +97,7 @@ header{
         width: 8.8rem;
         font-family: 'Rubik';
         cursor: pointer;
+        transition: 0.2s;
         &:hover{
           background-color: transparent;
           color: $blueColor;
@@ -110,6 +114,7 @@ header{
         font-family: 'Rubik';
         box-shadow: 0px 5px 4px -3px rgb(211, 211, 211);
         cursor: pointer;
+        transition: 0.2s;
         &:hover{
           transition: 0.2s;
           background-color: transparent;
@@ -214,6 +219,7 @@ header{
         font-family: 'rubik';
         cursor: pointer;
         margin-top: 12px;
+        transition: 0.2s;
         &:hover{
           background-color: transparent;
           color: $blueColor;
@@ -290,6 +296,7 @@ header{
         font-family: 'Rubik';
         cursor: pointer;
         padding: 5px;
+        transition: 0.2s;
         &:hover{
           background-color: transparent;
           color: $blueColor;
@@ -371,6 +378,7 @@ header{
       margin-top: 48px;
       margin-bottom: 120px;
       padding: 5px;
+      transition: 0.2s;
       &:hover{
         background-color: transparent;
         color: $blueColor;
@@ -423,14 +431,6 @@ header{
       &::placeholder{
         color: $textColor;
       }
-      &:invalid + span::before{
-        content: '✖';
-        position: relative;
-        right: 2rem;
-        top: 0.45rem;
-        color: $redColor;
-        margin: -8px;
-      }
       &:valid{
         border: none;
         border-style: solid;
@@ -464,6 +464,7 @@ header{
       font-size: 12px;
       font-family: 'rubik';
       cursor: pointer;
+      transition: 0.3s;
       &:hover{
         background-color: rgb(255, 252, 252);
         color: $redColor;
@@ -488,6 +489,12 @@ header{
       flex-direction: row;
       color: rgb(255, 255, 255);
     }
+  }
+  .midFooter{
+    display: flex;
+    column-gap: 40px;
+    position: relative;
+    right: 3.2rem;
     .textLeftFooter{
       color: rgb(255, 255, 255);
       font-family: 'rubik';
@@ -503,6 +510,7 @@ header{
     justify-content: center;
     align-items: center;
     column-gap: 25px;
+    transition: 0.2s;
     :hover{
       cursor: pointer;
       transition: 0.2s;
