--- a/css/style.css
+++ b/css/style.css
@@ -430,10 +430,11 @@ header {
 }
 #secondSection #firstTextSecondSection {
   font-family: "garamond";
+  font-size: 1.5rem;
 }
 #secondSection #secondTextSecondSection {
   font-size: 26px;
-  width: 80%;
+  width: 85%;
   margin-top: 10px;
   font-family: "rubik";
 }
@@ -471,14 +472,6 @@ header {
   right: 2rem;
   top: 0.45rem;
   margin: -8px;
-}
-#secondSection .btnSecondSection #iconError {
-  position: relative;
-  width: 1.5rem;
-  height: 1.7rem;
-  right: 40px;
-  top: 6px;
-  opacity: 1;
 }
 #secondSection .btnSecondSection #contactUs {
   background-color: hsl(0deg, 94%, 66%);
@@ -546,6 +539,10 @@ header {
   filter: invert(50%);
 }
 
+.headerHamburguer {
+  opacity: 0;
+}
+
 @media (max-width: 1025px) {
   header {
     justify-content: space-around;
@@ -575,6 +572,7 @@ header {
   }
   .firstContent .left-bm #textFirstContent {
     text-align: center;
+    width: 80%;
   }
   .firstContent .left-bm .btn-bm {
     align-items: center;
@@ -586,24 +584,121 @@ header {
   }
   .txt .divRightEvent {
     align-items: center;
+    row-gap: 30px;
   }
   .txt .divRightEvent #textEvent {
     text-align: center;
-    width: 500px;
+    width: 450px;
   }
-  .txt .divRightEvent .btn-ft {
-    align-items: center;
+  .txt .divRightEvent #btnInfo {
+    width: 250px;
+  }
+  .secondContentSecondSection .leftFooter {
+    position: initial;
+  }
+  .fourthContent #moreInfo {
+    width: 250px;
   }
 }
 @media (max-width: 700px) {
   .divCards {
     flex-direction: column;
   }
-  .secondContentSecondSection .leftFooter {
+}
+@media (max-width: 620px) {
+  header {
+    opacity: 0;
+    position: absolute;
+    margin: 0;
+    position: relative;
+    right: 100px;
+  }
+  .headerHamburguer {
+    opacity: 1;
+    margin-bottom: 4em;
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+  }
+  .headerHamburguer .left-header {
     position: initial;
   }
+  .firstContent .left-bm #titleFirstContent {
+    width: 80%;
+  }
+  .firstContent .right-bm #img-ilust {
+    width: 20rem;
+  }
+  .secondContent #textSecondContent {
+    width: 85%;
+  }
+  .txt .divRightEvent #textEvent {
+    width: 100%;
+  }
+  .div-btn-ft {
+    position: initial;
+    gap: 0;
+    width: 25rem;
+    margin: 0;
+    display: flex;
+  }
+  .linha {
+    display: flex;
+    position: relative;
+    left: 0.8em;
+    width: 96%;
+  }
+  .linha > * {
+    width: 100% !important;
+  }
+  .divLeftEvent {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .divLeftEvent #imgLeftEvent {
+    width: 90%;
+  }
+  .thirdContent #textThirdContent {
+    width: 90%;
+  }
+  .fourthContent #textFourthContent {
+    width: 100%;
+  }
+  .fourthContent .questions {
+    width: 95%;
+  }
+  .secondContentSecondSection {
+    flex-direction: column;
+    align-items: center;
+  }
+  .secondContentSecondSection .midFooter {
+    position: initial;
+    flex-direction: column;
+    text-align: center;
+  }
   .secondContentSecondSection .leftFooter .imgLeftFooter {
-    width: 5rem;
+    position: relative;
+    left: 60px;
+    margin-top: 25px;
+  }
+  .secondContentSecondSection .rigthFooter {
+    margin-bottom: 25px;
+  }
+}
+@media (max-width: 425px) {
+  #secondSection .btnSecondSection {
+    flex-direction: column;
+    row-gap: 10px;
+  }
+  #secondSection .btnSecondSection #contactUs {
+    width: 100%;
+    height: 3em;
+  }
+  #secondSection .btnSecondSection #email:valid + span::before {
+    left: 265px;
+    right: 0;
+    top: -44px;
   }
 }
 
