--- a/sass/style.scss
+++ b/sass/style.scss
@@ -205,6 +205,7 @@ header{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    text-align: center;
     #titleEvent{
       font-size: 30px;
       font-family: 'rubik';
