--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,11 @@ header {
   justify-content: space-evenly;
   margin-top: 40px;
   margin-bottom: 80px;
+  opacity: 1;
+}
+
+.headerHamburguer {
+  opacity: 0;
 }
 
 .left-header {
