--- a/sass/style.scss
+++ b/sass/style.scss
@@ -29,6 +29,10 @@ header{
   justify-content: space-evenly;
   margin-top: 40px;
   margin-bottom: 80px;
+  opacity: 1;
+}
+.headerHamburguer{
+  opacity: 0;
 }
 .left-header{
   position: relative;
