--- a/css/style.css
+++ b/css/style.css
@@ -189,9 +189,10 @@ header {
   background-color: transparent;
 }
 
-.buttonsQuestions {
+.buttonsEvent {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .activated {
@@ -641,10 +642,6 @@ header {
   }
   .div-btn-ft {
     position: initial;
-    gap: 0;
-    width: 25rem;
-    margin: 0;
-    display: flex;
   }
   .linha {
     display: flex;
@@ -690,6 +687,21 @@ header {
     margin-bottom: 25px;
   }
 }
+@media (max-width: 484px) {
+  .div-btn-ft {
+    flex-direction: column;
+    align-items: center;
+    row-gap: 25px;
+    top: 5em;
+    width: auto;
+  }
+  .linha {
+    opacity: 0;
+  }
+  .buttonsEvent {
+    width: 13em;
+  }
+}
 @media (max-width: 426px) {
   #secondSection .btnSecondSection {
     flex-direction: column;
@@ -707,20 +719,6 @@ header {
   .fourthContent .questions .titleQuestion {
     text-align: start;
     max-width: 10em;
-  }
-  .div-btn-ft {
-    flex-direction: column;
-    align-items: center;
-    row-gap: 25px;
-    top: 5em;
-    width: auto;
-  }
-  .linha {
-    opacity: 0;
-  }
-  .buttonsQuestions {
-    align-items: center;
-    width: 13em;
   }
 }
 
